# MRTNet

./: .gitignore  README.org  pyproject.toml
scripts/: datagen.py  kirin.py  model.py  pos.txt
