[tool.poetry]
name = "DataBuilderUCL"
version = "0.1.0"
description = "Data Builder scripts for UCL"
authors = ["sudhanv <mystogun125@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.7"
torch = "^1.12.1"
numpy = "1.21.6"
Pillow = "^9.2.0"
matplotlib = "3.5.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
